--- a/about.css
+++ b/about.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -417,7 +417,7 @@ body {
     
     .services-section {
       text-align: center;
-      padding: 80px 20px;
+      padding: 0px 20px;
       max-width: 1200px;
       margin: 0 auto;
     }
@@ -503,11 +503,7 @@ body {
 
     /* ////////////////////////////// WHY CHOSE US ///////////////// */
 
-    body {
-  font-family: 'Times New Roman', Times, serif;
-      background: #fff;
-      color: #333;
-    }
+ 
 
     .why-choose {
   display: grid;
@@ -556,7 +552,7 @@ body {
   font-weight: 700;
   margin-bottom: 40px;
   line-height: 1.3;
-  color: #111;
+  color: #444;
 }
 
 .why-item {
@@ -579,7 +575,7 @@ body {
 }
 
 .why-item p {
-  font-size: 15px;
+  font-size: 20px;
   color: #555;
   line-height: 1.6;
   margin: 0;
