--- a/gallery.css
+++ b/gallery.css
@@ -68,7 +68,7 @@
   left: 0;
   width: 100%;
   padding: 10px 15px;
-  background: #800020;
+  background: #0a3d62;
   color: #fff;
   font-weight: 500;
   font-size: 1rem;
