--- a/navbar.css
+++ b/navbar.css
@@ -57,7 +57,7 @@ header {
   height: 2px;
   bottom: 0;
   left: 0;
-  background: #ffb703;
+  background: white;
   transition: width 0.3s;
 }
 .nav-links li a:hover::after {
